hphp/test/zend/good/zend/abstract-static.php
<?php
abstract class TestClass
{
    abstract static public function getName();
}
?>
===DONE===