hphp/test/zend/bad/tests/basic/bug51709_1.php
<?php

class foo {
        static function for() {
                echo "1";
        }
}

?>
===DONE===
<?php exit(0); ?>